# mentask.py

./: .askgem_knowledge.md  .gitignore  .mentask_knowledge.md  0_27_0.md  AGENTS.md  Análisis de robustez y usabilidad.md  AskGem v0.16.3 - gemini-2.md  CHANGELOG.md  CHANGES.md  CLAUDIFIED_ASKGEM_KB.md  COMPLETION_SUMMARY.md  CONTEXTUAL_GUIDE.md  FEATURES.md  GEMINI.md  GENERADOS.md  PALETTE.md  README.md  README_BRANDED.md  ROADMAP.md  SECURITY.md  STANDARD.md  changelog v.14.0 - v.15.0  closed_prs.json  docs-assembler-config.json  fix_all.py  fix_test.py  fixplan.md  gen_changelog.py  git_history.txt  git_status_script.py  mentask_knowledge.md  openssf_audit.md  patch_config.py  patch_dashboard.py  patch_registry.py  patch_tests.py  pr_description.md  pr_description.txt  pyproject.toml  qp_audit.md  (+7 more)
.askgem/: heartbeat.md  memory.md  usage_log.json
.github/: dependabot.yml
.github/workflows/: build-binaries.yml  ci.yml  deploy.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  python-ci.yml  release.yml  security.yml
.jules/: bolt.md  palette.md  sentinel.md
.trunk/: .gitignore  trunk.yaml
.trunk/configs/: ruff.toml
.zed/: debug.json  tasks.json
docs/: AGENT.md  AGENTS.md  CI-CD.md  CONTRIBUTING.md  DEMO.md  MEMORY.md  SOUL.md  STYLING_ARCHITECTURE.md  demo.tape  index.html  style.css
docs/artifacts/: repo_audit_askgem.md
docs/superpowers/plans/: 2025-05-15-security-and-robustness-fixes.md
docs/wiki/: Dependencies.md  Development_Guide.md  Home.md  Installation_and_Setup.md  Usage.md  backlog.md  index.md  plan_improvements.md  roadmap.md  security.md  standard.md
newbrand/: INTEGRATION_GUIDE.md  contextual_prompts.py  mentask_cli_integration_example.py
scratch/: debug_mock.py  probe_ruff_raw.py  repo_diff.py  test_script.py  test_security_patterns.py  verify_lsp.py
scripts/: cleanup_branches.sh  diagnostic_usability.py
src/: test_mcp.py
src/askgem/: __init__.py  main.py
src/askgem/agent/: chat.py  orchestrator.py  schema.py  tools_registry.py  ui_interface.py
src/askgem/cli/: console.py  dashboard.py  main.py  renderer.py  themes.py  ui_adapters.py
src/askgem/core/: audit_manager.py  compression.py  config_manager.py  history_manager.py  i18n.py  identity_manager.py  memory_manager.py  metrics.py  mission_manager.py  paths.py  security.py  summarizer.py  tasks_manager.py  trust_manager.py
src/askgem/engine/: query_engine.py
src/askgem/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  zh.json
src/askgem/tools/: file_tools.py  memory_tools.py  search_tools.py  system_tools.py  web_tools.py
src/askgem/ui/: console.py
src/mentask/: __init__.py
src/mentask/agent/: __init__.py  chat.py  orchestrator.py  schema.py  tools_registry.py
src/mentask/cli/: contextual_prompts.py  gem_renderer.py  main.py  poc_prompts.py  prompts.py  renderer.py  themes.py  ui_utils.py
src/mentask/core/: compression.py  config_manager.py  constraints.py  execution.py  history_manager.py  i18n.py  identity_manager.py  mcp_manager.py  memory_manager.py  model_discovery.py  models_hub.py  ollama_endpoint.py  paths.py  plugin_loader.py  process_tracker.py  retry_strategy.py  security.py  trust_manager.py
src/mentask/locales/: en.json  es.json
src/mentask/tools/: analysis_logic.py  file_tools.py  search_tools.py  system_tools.py  web_tools.py  worktree_tools.py
src/pygemai_cli/: __init__.py
src/pygemai_cli/core/: history_manager.py
src/pygemai_cli/engine/: query_engine.py
src/pygemai_cli/tools/: file_tools.py  system_tools.py
tests/: conftest.py  diagnostic_usability.py  dummy_cli.py  test_chat_agent.py  test_cli_main.py  test_cli_provider.py  test_config_manager.py  test_contextual_prompts.py  test_dashboard_smoke.py  test_file_tools.py  test_i18n.py  test_identity_manager.py  test_lsp_integration.py  test_memory_manager.py  test_memory_tools.py  test_mission_manager.py  test_openai_security.py  test_orchestrator.py  test_search_tools.py  test_session.py  test_system_tools.py  test_tools_registry.py  test_utils.py  test_web_tools.py
tests/agent/: test_chat_agent.py  test_command_handler.py  test_context_manager.py  test_orchestrator.py  test_session_manager.py  test_stream_processor.py  test_task_classifier.py  test_tools_registry.py
tests/agent/core/: test_lsp_integration.py  (+1 more)
tests/cli/: test_cli_main.py  test_contextual_prompts.py  test_dashboard_smoke.py  test_gem_renderer.py
tests/core/: test_audit_manager.py  test_compression.py  test_config_manager.py  test_config_manager_missing.py  test_config_manager_security.py  test_constraints.py  test_execution.py  test_history_manager.py  test_i18n.py  test_identity_manager.py  test_mcp_manager.py  test_memory_manager.py  test_metrics.py  test_mission_manager.py  test_models_hub.py  test_paths.py  test_plugin_loader_security.py  test_process_tracker.py  test_retry_strategy.py  test_security.py  test_tasks_manager.py  test_trust.py
tests/integration/: test_full_agent_loop.py  test_transcript.json  test_workspace_flow.py
tests/scratch/: probe_ruff_raw.py  verify_lsp.py
tests/tools/: test_analysis_logic.py  test_file_tools.py  test_forge_plugin_validation.py  test_memory_tools.py  test_repl_tool.py  test_search_tools.py  test_security_file_tools.py  test_system_tools.py  test_web_tools.py  test_worktree_tools.py
wiki/: API_Reference.md  Architecture.md  Dependencies.md  Development_Guide.md  Home.md  Installation_and_Setup.md  Usage.md
(+50 files in other folders)
