[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askgem"
version = "2.0.0"
description = "Autonomous AI coding agent CLI powered by Google Gemini with agentic filesystem tools."
readme = "README.md"
authors = [{ name = "julesklord", email = "julioglez@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "google-genai>=0.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "build",
    "twine",
    "tox>=4.0.0",
]

[project.scripts]
askgem = "askgem.main:run_chatbot"

[project.urls]
Homepage = "https://github.com/julesklord/askgem"
Documentation = "https://github.com/julesklord/askgem/blob/main/README.md"
Changelog = "https://github.com/julesklord/askgem/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
askgem = ["locales/*.json"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
