[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askgem"
version = "2.1.1"
description = "Autonomous AI Coding Agent powered by Google Gemini"
readme = "README.md"
authors = [
    { name = "julesklord", email = "julioglez.93@gmail.com" }
]
license = { text = "GPL-3.0-only" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "google-genai>=0.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "build",
    "twine",
    "tox>=4.0.0",
]

[project.scripts]
askgem = "askgem.cli.main:run_chatbot"

[project.urls]
Homepage = "https://github.com/julesklord/askgem.py"
Documentation = "https://github.com/julesklord/askgem.py/wiki"
Changelog = "https://github.com/julesklord/askgem.py/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
askgem = ["locales/*.json"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
