[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentask"
version = "0.19.0"
description = "MentAsk: Universal AI Coding Agent with multi-provider support via models.dev"
readme = "README.md"
authors = [
    { name = "julesklord", email = "julioglez.93@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.2.0",
    "rich>=13.0.0",
    "keyring>=25.0.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "ruff>=0.4.0",
    "build",
    "twine",
    "tox>=4.0.0",
]

[project.scripts]
mentask = "mentask.cli.main:run_chatbot"

[project.urls]
Homepage = "https://github.com/julesklord/mentask.py"
Documentation = "https://github.com/julesklord/mentask.py/wiki"
Changelog = "https://github.com/julesklord/mentask.py/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
mentask = ["locales/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
